[file]{Nav.css}-> add fix Nav class and set z-index style for nav element

--- a/src/css/Page/index/Header/Nav/Nav.css
+++ b/src/css/Page/index/Header/Nav/Nav.css
@@ -1,6 +1,13 @@
 #topNav
 {
     height: 85px;
+    z-index: 2;
+}
+.fixNav
+{
+    width: var(--col-12);
+    top: 0;
+    position: fixed;
 }
 #NavLogoWrapper
 {
